--- a/campfire-client/package.json
+++ b/campfire-client/package.json
@@ -46,6 +46,8 @@
     "@storybook/addon-backgrounds": "^5.0.10",
     "@storybook/addon-links": "^5.0.10",
     "@storybook/addons": "^5.0.10",
-    "@storybook/react": "^5.0.10"
+    "@storybook/react": "^5.0.10",
+    "@babel/core": "^7.4.3",
+    "babel-loader": "^8.0.5"
   }
 }
