--- a/campfire-client/package.json
+++ b/campfire-client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.1.3",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
