--- a/campfire-server/package.json
+++ b/campfire-server/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "ws": "^8.0.0"
   }
 }
