--- a/campfire-server/package.json
+++ b/campfire-server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "nodemon --exec babel ./index.js --out-dir ./dist --source-maps --copy-files",
   },
   "keywords": [],
   "author": "",
