--- a/campfire-server/package.json
+++ b/campfire-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "nodemon --exec babel ./index.js --out-dir ./dist --source-maps --copy-files",
+    "build": "nodemon --exec babel ./index.js --out-dir ./dist --source-maps --copy-files"
   },
   "keywords": [],
   "author": "",
