--- a/campfire-client/package.json
+++ b/campfire-client/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-to-bottom": "^4.1.2",
+    "react-tooltip": "^4.2.21",
     "react-youtube": "^7.13.1",
     "socket.io-client": "^4.1.3",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
